Opened 9 years ago
Closed 2 years ago
#12453 closed bug (fixed)
/boot/system has bogus attributes
Reported by: | pulkomandy | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta5 |
Component: | File Systems/packagefs | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
/Dev/Haiku/ports/haiku-apps/lnlauncher/work-1.1.2/sources/lnlauncher-1.1.2# listattr /boot/system File: /boot/system Type Size Name ---------------------------------------------------------- listattr: stat failed for "SYS:PACKAGE": No such file or directory listattr: stat failed for "SYS:PACKAGE_FILE": No such file or directory 0 bytes total in attributes.
It is also missing BEOS:TYPE (other mounted volumes have the "directory" type). This results in BNodeInfo::GetTrackerIcon giving unexpected results, for example.
Change History (2)
comment:1 by , 9 years ago
Description: | modified (diff) |
---|
comment:2 by , 2 years ago
Milestone: | Unscheduled → R1/beta5 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fix merged in hrev56655